; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_ex_cmds.c_check_restricted.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_ex_cmds.c_check_restricted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@restricted = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [41 x i8] c"E145: Shell commands not allowed in rvim\00", align 1
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_restricted() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @restricted, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = call i32 @_(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @EMSG(i32 %5)
  %7 = load i32, i32* @TRUE, align 4
  store i32 %7, i32* %1, align 4
  br label %10

8:                                                ; preds = %0
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %8, %4
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @EMSG(i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
